--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -52,7 +52,7 @@
                 Welcome {{ user.username }} - Dashboard</a>
             </li>
             <li class="nav-item mr-3">
-              <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link"><i class="fas fa-sign-out-alt"> Logout</i></a>
+              <a href="javascript:{document.getElementById('logout').submit()}" class="nav-link"><i class="fas fa-sign-out-alt"></i> Logout</a>
               <form action="{% url 'logout' %}" id="logout" method="POST">
                 {% csrf_token %}
                 <input type="hidden">
